# mcp-beads-village

./: .gitignore  .mcp.json  AGENTS-LITE.md  AGENTS.md  README.md  benchmark.py  debug_schema.py  package.json  pyproject.toml  run_server.bat  test_mcp.py  test_new_features.py  test_tools.py
.beads/: issues.jsonl
.beads-village/: agents.json
.claude/: settings.local.json
beads_village/: __init__.py  server.py
beads_village/dashboard/: app.py
config/: claude_desktop.json  cursor_settings.json  multi_agent.json
