[project]
name = "mcp-beads-village"
version = "0.1.0"
description = "MCP wrapper combining Beads + Agent Mail for multi-agent workflow"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
beads-village = "beads_village.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beads_village"]
